Fix overflow when nesting image-row flex things

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -79,7 +79,6 @@ p {
 
 .image-row {
     display: flex;
-    width: 100%;
     flex: 0 1 auto;
     justify-content: space-around;
 }
